# chalmers-ldap-gamma-sync

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.js  package.json
.github/workflows/: docker.yml
src/: main.rs
