[package]
name = "chalmers-ldap-gamma-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.4.0"
ldap3 = "0.11.3"
ureq = { version = "2.9.6", features = ["json"] }

[profile.release]
strip = true
lto = true
opt-level = "s"
